--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+    font-size: 16px;
+    background-color: white;
+}
+
 body {
     margin: 0 auto;
     padding: 0;
@@ -27,4 +32,9 @@ td[colspan] {
 
 td, th {
     width: 85px;
+}
+
+#settings div {
+    width: 50%;
+    float: left;
 }
